rename some classes